fix the bug that long word would overflow in comment

--- a/static/sass/chatroom.sass
+++ b/static/sass/chatroom.sass
@@ -120,7 +120,8 @@ body
         @media only screen and (max-width: 767px)
           margin-left: 40px
         .info-context
-          white-space: pre
+          white-space: pre-wrap
+          word-wrap: break-word
 .info-id
   color: #999
   margin: 0 0 2rem 0
